--- a/设计文档/my-style.less
+++ b/设计文档/my-style.less
@@ -3,4 +3,18 @@
     color: rgb(241, 255, 204);
     background-color: rgb(51, 173, 27);
   }
+  mil > code {
+    color: rgb(255, 235, 232);
+    background-color: rgb(204, 58, 70);
+  }
+
+  sh > hr{
+    width: 50%;
+    border-top:3px double rgb(192, 192, 192);
+  }
+  
+  tech{
+    color:#4EC5F1;
+    font-weight:bold;
+  }
 }
