--- a/设计文档/my-style.less
+++ b/设计文档/my-style.less
@@ -1,7 +1,9 @@
 #construct {
-  code {
+  @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300&display=swap');  code {
     color: rgb(241, 255, 204);
     background-color: rgb(51, 173, 27);
+    font-family: 'Noto Sans SC', sans-serif;
+    
   }
   mil > code {
     color: rgb(255, 235, 232);
