--- a/设计文档/my-style.less
+++ b/设计文档/my-style.less
@@ -20,3 +20,26 @@
     font-weight:bold;
   }
 }
+
+#civilization {
+  @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300&display=swap');  code {
+    color: rgb(241, 255, 204);
+    background-color: rgb(51, 173, 27);
+    font-family: 'Noto Sans SC', sans-serif;
+    
+  }
+  mil > code {
+    color: rgb(255, 235, 232);
+    background-color: rgb(204, 58, 70);
+  }
+
+  sh > hr{
+    width: 50%;
+    border-top:3px double rgb(192, 192, 192);
+  }
+  
+  tech{
+    color:#4EC5F1;
+    font-weight:bold;
+  }
+}
